--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script>document.write('<base href="' + document.location + '" />');</script>
     
     <title>Router Sample</title>
-    <link rel="stylesheet" href="styles.css">
+
     <script src="https://code.angularjs.org/2.0.0-beta.0/angular2-polyfills.js"></script>
     <script src="https://code.angularjs.org/tools/system.js"></script>
     <script src="https://code.angularjs.org/tools/typescript.js"></script>
@@ -15,6 +15,9 @@
     <!-- Add the router library -->
     <script src="https://code.angularjs.org/2.0.0-beta.0/router.dev.js"></script>
     
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">    
+    <link rel="stylesheet" href="app/styles.css">        
     <script>
       System.config({
         transpiler: 'typescript', 
@@ -32,9 +35,3 @@
 
 </html>
 
-
-<!-- 
-Copyright 2016 Google Inc. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at http://angular.io/license
--->
